# MSE_FTP_DeLearn

./: .gitignore  README.md  SetupGuide.md  main.py  pyproject.toml
artifacts/01_cnn_icosimal/: TestCNN_baseline_no_aug_128.pt
artifacts/01_cnn_icosimal/BigCNN_big_cnn_flip_64/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_flip_randaug_1_7_64/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_flip_randaug_2_7_64/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_flip_randaug_2_9_64/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_flip_randaug_3_11_64/: config.json  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_flip_randaug_3_11_64_sssss/: best_model.pt  history.json  last_model.pt
artifacts/01_cnn_icosimal/BigCNN_big_cnn_flip_randaug_3_9_128/: config.json  history.json  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_flip_randaug_3_9_64/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_no_aug_64/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_no_aug_64_adam_w/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_no_aug_64_lr_00001/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_no_aug_64_lr_001/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_no_aug_64_rmsprop/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_big_cnn_no_aug_64_sgd_momentum/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_trial_0_big_cnn_optuna_dropout_0_2/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_trial_1_big_cnn_optuna_dropout_0_5/: best_model.pt  config.json  history.json  last_model.pt
artifacts/01_cnn_icosimal/BigCNN_trial_1_big_cnn_optuna_dropout_0_5_2/: summary.json
artifacts/01_cnn_icosimal/BigCNN_trial_2_big_cnn_optuna_dropout_0_0/: best_model.pt  config.json  history.json  last_model.pt  summary.json
artifacts/01_cnn_icosimal/BigCNN_trial_3_big_cnn_optuna_dropout_0_3/: best_model.pt  history.json  summary.json
artifacts/01_cnn_icosimal/BigCNN_trial_3_big_cnn_optuna_dropout_0_30000000000000004/: config.json  last_model.pt
artifacts/01_cnn_icosimal/BigCNN_trial_4_big_cnn_optuna_dropout_0_8/: best_model.pt  config.json  summary.json
artifacts/01_cnn_icosimal/BigCNN_trial_4_big_cnn_optuna_dropout_0_8_2/: history.json  last_model.pt
artifacts/01_cnn_icosimal/MediumCNN_medium_cnn_no_aug_64/: config.json  history.json  summary.json
artifacts/01_cnn_icosimal/SimpleCNN_simple_cnn_baseline_no_aug_128/: config.json  history.json  summary.json
artifacts/01_cnn_icosimal/SimpleCNN_simple_cnn_baseline_no_aug_64/: config.json  history.json  summary.json
artifacts/01_cnn_icosimal/TestCNN_baseline_no_aug_128/: config.json  history.json  last_model.pt  summary.json
notebooks/: 01_cnn_icosimal.ipynb  02_cg-linear-regression-stud.ipynb
projects/01_cnn_icosimal/notebooks/: 01_cnn_icosimal.ipynb
src/p01_cnn_icosimal/: __init__.py  datasets.py  evaluation.py  experiment_runner.py  training.py  workflow.py
src/p01_cnn_icosimal/models/: __init__.py  big_cnn.py  medium_cnn.py  simple_cnn.py  test_cnn.py
src/p02_computational_graphs/: cgnodes.py
