[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mse-ftp-delearn"
version = "0.1.0"
description = "Deep learning projects and utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "wandb==0.24.2",
]

[dependency-groups]
dev = [
    "nbqa>=1.9.1",
    "ruff>=0.15.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# ============================================================
# Ruff Configuration
# ============================================================

[tool.ruff]
line-length = 150
target-version = "py311"
extend-exclude = [
  "venv",
  ".venv",
  "data",
  "build",
  "dist",
]

# ============================================================
# Ruff Formatter
# ============================================================

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================
# Ruff Linter
# ============================================================

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # trailing comma handled by formatter
  "D203",    # conflicts with D211
  "D212",    # conflicts with D213
  "INP001",  # implicit namespace package
  "ANN401",  # allow Any
  "FBT001",
  "FBT002",
  "FBT003",
  "PLR0913", # too many function arguments
  "N806",
  "N803",    # scientific naming
  "EXE002",
  "T201",    # allow print
  "ERA001",  # allow commented code temporarily
]
fixable = ["ALL"]

# ============================================================
# Complexity
# ============================================================

[tool.ruff.lint.mccabe]
max-complexity = 20

# ============================================================
# Pylint-style limits
# ============================================================

[tool.ruff.lint.pylint]
max-branches = 20
max-statements = 100
max-returns = 10
